--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
-  </head>
-
-  <body>
-    <p>Hello World!</p>
-    <script type="text/javascript" src="index.js"></script>
-  </body>
-
-</html>
+My Page
