--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-LRE
+<!DOCTYPE html>
+<html>
+<title>LRE</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="stylesheet1.css">
+<link rel="stylesheet" href="stylesheet2.css">
+<link rel="stylesheet" href="stylesheet3.css">
+<link rel="stylesheet" href="stylesheet4.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
+</style>
+<body>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card-2 w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Quem somos</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Workshops</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">OBR</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">LARC</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Fale Conosco</a>
+  </div>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Quem somos</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Workshops</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">OBR</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">LARC</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Fale Conosco</a>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">LRE</h1>
+  <p class="w3-xlarge">Laboratório de Robótica Educacional</p>
+</header>
+
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-32 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Quem somos:</h1>
+      <h5 class="w3-padding-32">O Laboratório de Robótica Educacional funciona no prédio da Engenharia Mecânica do Centro Tecnológico e desenvolve projetos com alunos das engenharias Mecânica Elétrica e Computação.</h5>
+      <p class="w3-text-grey">A chefia do laboratório é ocupada pela professora Carmen Faria Santos, mestre em Robótica Educacional, responsável pelo desenvolvimento dos projetos do laboratório no que diz respeito à organização de grupos de estudos de alunos da graduação, contratação de monitoria voluntária e coordenação dos trabalhos desenvolvidos pelos universitários com alunos da educação básica.</p>
+    </div>
+
+    <div class="w3-third w3-center">
+      <img src="aboutUs.svgz" style="width:150%" class="w3-padding-32">
+    </div>
+  </div>
+</div>
+
+<!-- Workshops -->
+<div class="w3-container w3-padding-32 w3-center" id="team">
+<h2>Workshops</h2>
+
+<div class="w3-row"><br>
+
+<div class="w3-third">
+  <img src="arduinoLogo.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Arduino</h3>
+</div>
+
+<div class="w3-third">
+  <img src="arduinoLogo.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Arduino ++</h3>
+</div>
+
+<div class="w3-third">
+  <img src="lineFollow.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Seguidor de linha</h3>
+</div>
+
+</div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-light-grey w3-padding-32 w3-center w3-opacity">
+  <div class="w3-xlarge w3-padding-32">
+    <p><img src="location-pointer.png" class="fa fa-map-marker fa-fw w3-margin-right"> Vitória, Espirito Santo</p>
+    <p><img src="close-envelope.png" class="fa fa-map-marker fa-fw w3-margin-right"> Email: LRE@mail.com</p>
+ </div>
+</footer>
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
+
+</body>
+</html>
